[package]
name = "rusty-shock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-shutdown = "0.2.1"
#async-osc = "0.2.0"
async-std = "1.12.0"
async-throttle = "0.3.2"
async-tungstenite = { version = "*", features = ["tokio-native-tls"]}
async-udp = "0.0.0"
chrono = "0.4.31"
colored = "2.0.4"
futures-util = {version = "0.3.29"}
log = "0.4.20"
once_cell = "1.18.0"
rosc = "0.10.1"
serde = { version = "1.0.190", features = ["derive"] }
swing = "0.1.0"
tokio = { version = "1.33.0", features = ["full"] }
tokio-native-tls = "0.3.1"
toml = "0.8.6"
tungstenite = "0.20.1"
